--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 
 .container {
-  margin: 0 20px;
+  margin: 20px;
 }
 
 .section {
@@ -36,6 +36,8 @@ body {
 }
 
 /* ---- header ---- */
+
+/* ---- section 2 ----*/
 
 /* ---- footer ---- */
 
